[gd_scene load_steps=3 format=3 uid="uid://cc6oqlnhotm1f"]

[ext_resource type="Script" path="res://World/UI/StatTree.gd" id="1_yqvef"]
[ext_resource type="PackedScene" uid="uid://r51ga47bbd3n" path="res://World/UI/Tooltip.tscn" id="2_3610f"]

[node name="StatTree" type="Control"]
z_index = -100
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yqvef")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 1
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.192157, 0.192157, 0.192157, 0.713726)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 276.0
offset_top = 99.0
offset_right = 876.0
offset_bottom = 549.0
mouse_filter = 2
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.8
offset_top = 16.2
offset_right = -28.8
offset_bottom = -16.2
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 5.0
offset_right = -9.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Label" type="Label" parent="ColorRect2/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Intelligence"

[node name="Tooltip" parent="ColorRect2/VBoxContainer/ColorRect/HBoxContainer/Label" instance=ExtResource("2_3610f")]

[node name="Label" parent="ColorRect2/VBoxContainer/ColorRect/HBoxContainer/Label/Tooltip/ColorRect" index="0"]
offset_right = 204.0
offset_bottom = 49.0
text = "Increases power of your spells by 5% each point"

[node name="Control" type="Control" parent="ColorRect2/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="ColorRect2/VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Intel" type="Button" parent="ColorRect2/VBoxContainer/ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "+"

[node name="ColorRect2" type="ColorRect" parent="ColorRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/VBoxContainer/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 5.0
offset_right = -9.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Label" type="Label" parent="ColorRect2/VBoxContainer/ColorRect2/HBoxContainer"]
layout_mode = 2
text = "Wisdom"

[node name="Tooltip" parent="ColorRect2/VBoxContainer/ColorRect2/HBoxContainer/Label" instance=ExtResource("2_3610f")]

[node name="Label" parent="ColorRect2/VBoxContainer/ColorRect2/HBoxContainer/Label/Tooltip/ColorRect" index="0"]
offset_right = 204.0
offset_bottom = 49.0
text = "Increases the amount of energy you gain per block by 5% each point"

[node name="Control" type="Control" parent="ColorRect2/VBoxContainer/ColorRect2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="ColorRect2/VBoxContainer/ColorRect2/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="wisdom" type="Button" parent="ColorRect2/VBoxContainer/ColorRect2/HBoxContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "+"

[node name="ColorRect3" type="ColorRect" parent="ColorRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/VBoxContainer/ColorRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 5.0
offset_right = -9.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Label" type="Label" parent="ColorRect2/VBoxContainer/ColorRect3/HBoxContainer"]
layout_mode = 2
text = "Agility"

[node name="Tooltip" parent="ColorRect2/VBoxContainer/ColorRect3/HBoxContainer/Label" instance=ExtResource("2_3610f")]

[node name="Label" parent="ColorRect2/VBoxContainer/ColorRect3/HBoxContainer/Label/Tooltip/ColorRect" index="0"]
offset_right = 204.0
offset_bottom = 49.0
text = "Increases your speed by 5% each point. Increases max dash charges by 1 every 2 points"

[node name="Control" type="Control" parent="ColorRect2/VBoxContainer/ColorRect3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="ColorRect2/VBoxContainer/ColorRect3/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="agility" type="Button" parent="ColorRect2/VBoxContainer/ColorRect3/HBoxContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "+"

[node name="ColorRect4" type="ColorRect" parent="ColorRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/VBoxContainer/ColorRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 5.0
offset_right = -9.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Label" type="Label" parent="ColorRect2/VBoxContainer/ColorRect4/HBoxContainer"]
layout_mode = 2
text = "Constitution"

[node name="Tooltip" parent="ColorRect2/VBoxContainer/ColorRect4/HBoxContainer/Label" instance=ExtResource("2_3610f")]

[node name="Label" parent="ColorRect2/VBoxContainer/ColorRect4/HBoxContainer/Label/Tooltip/ColorRect" index="0"]
offset_right = 204.0
offset_bottom = 49.0
text = "Increases your max health and health by 5% each point"

[node name="Control" type="Control" parent="ColorRect2/VBoxContainer/ColorRect4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="ColorRect2/VBoxContainer/ColorRect4/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="const" type="Button" parent="ColorRect2/VBoxContainer/ColorRect4/HBoxContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "+"

[node name="ColorRect5" type="ColorRect" parent="ColorRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/VBoxContainer/ColorRect5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 5.0
offset_right = -9.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Label" type="Label" parent="ColorRect2/VBoxContainer/ColorRect5/HBoxContainer"]
layout_mode = 2
text = "Comprehension"

[node name="Tooltip" parent="ColorRect2/VBoxContainer/ColorRect5/HBoxContainer/Label" instance=ExtResource("2_3610f")]

[node name="Label" parent="ColorRect2/VBoxContainer/ColorRect5/HBoxContainer/Label/Tooltip/ColorRect" index="0"]
offset_right = 204.0
offset_bottom = 49.0
text = "Decreases your spell cooldown by 5% and increase your max block charges by 1 every 2 points"

[node name="Control" type="Control" parent="ColorRect2/VBoxContainer/ColorRect5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="ColorRect2/VBoxContainer/ColorRect5/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="const" type="Button" parent="ColorRect2/VBoxContainer/ColorRect5/HBoxContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "+"

[connection signal="pressed" from="ColorRect2/VBoxContainer/ColorRect/HBoxContainer/Intel" to="." method="_on_intel_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/ColorRect2/HBoxContainer/wisdom" to="." method="_on_wisdom_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/ColorRect3/HBoxContainer/agility" to="." method="_on_agility_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/ColorRect4/HBoxContainer/const" to="." method="_on_const_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/ColorRect5/HBoxContainer/const" to="." method="_on_comp_pressed"]

[editable path="ColorRect2/VBoxContainer/ColorRect/HBoxContainer/Label/Tooltip"]
[editable path="ColorRect2/VBoxContainer/ColorRect2/HBoxContainer/Label/Tooltip"]
[editable path="ColorRect2/VBoxContainer/ColorRect3/HBoxContainer/Label/Tooltip"]
[editable path="ColorRect2/VBoxContainer/ColorRect4/HBoxContainer/Label/Tooltip"]
[editable path="ColorRect2/VBoxContainer/ColorRect5/HBoxContainer/Label/Tooltip"]
